--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,3 @@
-# Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
@@ -9,13 +8,13 @@ org.gradle.configuration-cache=false
 # check these on https://fabricmc.net/develop
 minecraft_version=1.21.11
 yarn_mappings=1.21.11+build.3
-loader_version=0.18.3
+loader_version=0.18.4
 loom_version=1.14-SNAPSHOT
+
+# Fabric API
+fabric_version=0.140.2+1.21.11
 
 # Mod Properties
 mod_version=1.1-1.21.11
 maven_group=net.ben.christmasmod
 archives_base_name=bens-christmas-mod
-
-# Dependencies
-fabric_version=0.140.2+1.21.11
